# panoptic-cli

./: .gitignore  README.md  pyproject.toml
src/panoptic_cli/: __init__.py  cli.py  html_render.py  mascotte.py  operators.py  query.py  render.py  search.py  signals.py  sync.py
src/panoptic_cli/data/: panoptic.sqlite
tests/: test_smoke.py
