[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panoptic-tawiza"
version = "0.1.0"
description = "panoptic — un regard sur l'agrivoltaïsme français. CLI citoyenne, souveraine, portable."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "tawiza" }]
keywords = ["agrivoltaisme", "opendata", "tawiza", "panoptic", "photovoltaique"]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "rapidfuzz>=3",
    "unidecode>=1.3",
]

[project.scripts]
panoptic = "panoptic_cli.cli:main"

[project.urls]
Homepage = "https://panoptic.tawiza.fr"
Source   = "https://github.com/tawiza/panoptic-cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
panoptic_cli = ["data/*.sqlite", "assets/*.txt", "assets/*.svg"]
